@@ -1,5 +1,7 @@
 *SVN*
 
+* SQLite, MySQL, PostgreSQL, Oracle: quote column names in column migration SQL statements.  #8466 [marclove, lorenjohnson]
+
 * Allow nil serialized attributes with a set class constraint.  #7293 [sandofsky]
 
 * Oracle: support binary fixtures.  #7987 [Michael Schoen]
